# dict-cedict

./: .gitignore  Makefile  README.md  cedict.py  cedicts.py  meson.build
cli/: gen-cedict.py  get-cedict.sh
